<resources>
    <string name="app_name">mumjolandia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">mumjolandia</string>
    <string name="nav_header_subtitle">ZnowuDziekanka</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_planner">Planner</string>
    <string name="menu_notepad">Notepad</string>
    <string name="menu_remote_controller">Remote Controller</string>
    <string name="menu_tetris">Tetris</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>

    <string name="home_second">Home Second</string>

    <string name="settingsCurrentIp">%1$s%2$s</string>
    <string name="settingsCurrentPort">%1$s%2$d</string>
    <string name="mumjolandiaPortKey">mumjolandiaport</string>
    <string name="mumjolandiaIpKey">mumjolandiaip</string>
    <string name="fragmentSettingsExit">Exit</string>
    <string name="fragmentSettingsSave">Save</string>
    <string name="fragmentSettingsCurrentPort">current port:</string>
    <string name="fragmentSettingsCurrentIp">current ip:</string>
    <string name="fragmentSettingsPort">port:</string>
    <string name="fragmentSettingsIp">ip:</string>
    <string name="remoteControllerShutdownServer">Shutdown server</string>
    <string name="notepad_save">Save</string>
    <string name="notepad_clear">Clear</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_rootfs">File Explorer</string>
    <string name="rootfs_close_server">Close Server</string>
</resources>
