<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_planner"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_planner" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_remote_controller"
            android:icon="@drawable/ic_menu_remote_controller"
            android:title="@string/menu_remote_controller" />
        <item
            android:id="@+id/nav_tetris"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_tetris" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>
