<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mumjolandia.android.ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/textViewSettingsIp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/fragmentSettingsIp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSettingsCurrentPort" />

    <TextView
        android:id="@+id/textViewSettingsPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/fragmentSettingsPort"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSettingsIp" />

    <EditText
        android:id="@+id/editTextSettingsPort"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSettingsPort"
        app:layout_constraintEnd_toStartOf="@+id/buttonSettingsSaveIp"
        app:layout_constraintStart_toEndOf="@+id/textViewSettingsPort"
        app:layout_constraintTop_toTopOf="@+id/textViewSettingsPort" />

    <EditText
        android:id="@+id/editTextSettingsIp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSettingsIp"
        app:layout_constraintEnd_toStartOf="@+id/buttonSettingsSaveIp"
        app:layout_constraintStart_toEndOf="@+id/textViewSettingsIp"
        app:layout_constraintTop_toTopOf="@+id/textViewSettingsIp" />

    <TextView
        android:id="@+id/textViewSettingsCurrentIp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/fragmentSettingsCurrentIp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSettingsCurrentPort"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/fragmentSettingsCurrentPort"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSettingsCurrentIp" />

    <Button
        android:id="@+id/buttonSettingsSaveIp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/fragmentSettingsSave"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSettingsPort"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewSettingsIp" />

    <Button
        android:id="@+id/buttonSettingsExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/fragmentSettingsExit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>